--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
   <header>
     <h1 class="logo">Mini money</h1>
     <nav>
-      <button>Ingresos y gastos</button>
-      <button>Presupuestos</button>
-      <button>Visualización</button>
+      <button onclick="window.location.href='ingresos-gastos.html'">Ingresos y Gastos</button>
+      <button onclick="window.location.href='presupuestos.html'">Presupuestos</button>
+      <button onclick="window.location.href='visualizacion.html'">Visualización</button>
     </nav>
   </header>
-
   <main>
     <section class="intro">
       <h2>¡Gestiona las finanzas de tu empresa!</h2>
@@ -24,7 +23,6 @@
         Este es un gestor de finanzas amigable y fácil de usar, podrás manejar todo desde aquí y al alcance de tu mano.
       </p>
     </section>
-    
     <section class="image-section">
       <img src="pexels-pixabay-259027.jpg"
     </section>
