FinanKey v2 - Cambio de nombre e interfaz

--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mini money</title>
+  <title>FinanKey</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1 class="logo">Mini money</h1>
+    <h1 class="logo">FinanKey</h1>
     <nav>
-      <button onclick="window.location.href='ingresos-gastos.html'">Ingresos y Gastos</button>
-      <button onclick="window.location.href='presupuestos.html'">Presupuestos</button>
-      <button onclick="window.location.href='visualizacion.html'">Visualización</button>
+      <button onclick="location.href='ingresos-gastos.html'">Ingresos y Gastos</button>
+      <button onclick="location.href='presupuestos.html'">Presupuestos</button>
+      <button onclick="location.href='visualizacion.html'">Visualización</button>
     </nav>
   </header>
+
   <main>
-    <section class="intro">
-      <h2>¡Gestiona las finanzas de tu empresa!</h2>
-      <p>
-        Si tienes un emprendimiento o una empresa en crecimiento este lugar es para ti.
-        Este es un gestor de finanzas amigable y fácil de usar, podrás manejar todo desde aquí y al alcance de tu mano.
-      </p>
-    </section>
-    <section class="image-section">
-      <img src="pexels-pixabay-259027.jpg"
+    <section class="contenido-index">
+  <img src="img/pexels-pixabay-259027.jpg" alt="Gestión financiera" class="imagen-index">
+  <div class="index-texto">
+    <h1>¡Gestiona las finanzas de tu empresa!</h1>
+    <p>¿Tienes un emprendimiento o una empresa en crecimiento? Este espacio es para ti. Organiza tus finanzas con una herramienta simple, ágil y diseñada para acompañarte en cada paso. Todo el control, al alcance de tu mano.</p>
+    <h2>¿Que puedes hacer acá?</h2>
+    <p>Con esta herramienta podrás registrar fácilmente tus ingresos y gastos, llevar el control de tus presupuestos y visualizar tu balance general en gráficos claros y fáciles de entender. Todo en un solo lugar, diseñado para que tomes decisiones inteligentes y lleves tus finanzas al siguiente nivel.</p>
+  </div>
     </section>
   </main>
 </body>
