--- a/ingresos-gastos.html
+++ b/ingresos-gastos.html
@@ -8,7 +8,7 @@
 </head>
 <body class="body-ingresos">
   <header>
-    <button class="logo" onclick="window.location.href='index.html'">MiniMoney</button>
+    <button class="logo" onclick="window.location.href='index.html'">FinanKey</button>
     <nav>
       <button onclick="window.location.href='ingresos-gastos.html'">Ingresos y Gastos</button>
       <button onclick="window.location.href='presupuestos.html'">Presupuestos</button>
@@ -16,20 +16,25 @@
     </nav>
   </header>
   <main>
-    <h2>Registrar Transacción</h2>
-      <input type="date" id="input-fecha" placeholder="Fecha">
-      <select id="select-tipo">
-        <option value="ingreso">Ingreso</option>
-        <option value="gasto">Gasto</option>
-      </select>
-      <input type="number" id="input-cantidad" placeholder="Cantidad">
-      <button id="btn-agregar">Agregar</button>
+    <div class="contenedor-ingresos">
+      <h2>Registrar Transacción</h2>
+      <p>Cada peso cuenta, ¡Regístralo!</p>
+      <section class="seccion-transacciones">
+        <input type="date" id="input-fecha" placeholder="Fecha">
+        <select id="select-tipo">
+          <option value="ingreso">Ingreso</option>
+          <option value="gasto">Gasto</option>
+        </select>
+        <input type="number" id="input-cantidad" placeholder="Cantidad">
+        <button id="btn-agregar">Agregar</button>
 
-      <div class="filtros">
-        <button id="btn-ingresos">Mostrar Ingresos</button>
-        <button id="btn-gastos">Mostrar Gastos</button>
-        <button id="btn-todo">Mostrar Todo</button>
-      </div>
+        <div class="filtros">
+          <button id="btn-ingresos">Mostrar Ingresos</button>
+          <button id="btn-gastos">Mostrar Gastos</button>
+          <button id="btn-todo">Mostrar Todo</button>
+        </div>
+      </section>
+    </div>
   </main>
 </body>
 </html>
