--- a/ingresos-gastos.html
+++ b/ingresos-gastos.html
@@ -36,5 +36,95 @@
       </section>
     </div>
   </main>
+  
+  <script>
+    window.onload = () => {
+      const token = localStorage.getItem("token");
+      if (!token) {
+        alert("Debes iniciar sesión para acceder.");
+        window.location.href = "inicio-sesion.html";
+        return;
+      }
+
+      function parseJwt(token) {
+        try {
+          const base64Url = token.split('.')[1];
+          const base64 = decodeURIComponent(atob(base64Url).split('').map(c =>
+            '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2)
+          ).join(''));
+          return JSON.parse(base64);
+        } catch (e) {
+          return null;
+        }
+      }
+
+      const decoded = parseJwt(token);
+      const usuario_id = decoded?.id;
+
+      if (!usuario_id) {
+        alert("Token inválido. Inicia sesión nuevamente.");
+        window.location.href = "inicio-sesion.html";
+        return;
+      }
+
+      const btnAgregar = document.getElementById("btn-agregar");
+      const inputFecha = document.getElementById("input-fecha");
+      const inputCantidad = document.getElementById("input-cantidad");
+      const selectTipo = document.getElementById("select-tipo");
+
+      const btnIngresos = document.getElementById("btn-ingresos");
+      const btnGastos = document.getElementById("btn-gastos");
+      const btnTodo = document.getElementById("btn-todo");
+
+      const lista = document.createElement("ul");
+      document.querySelector(".seccion-transacciones").appendChild(lista);
+
+      btnAgregar.addEventListener("click", () => {
+        const fecha = inputFecha.value;
+        const tipo = selectTipo.value.toLowerCase();
+        const cantidad = inputCantidad.value;
+
+        if (!fecha || !cantidad) {
+          alert("Por favor completa todos los campos.");
+          return;
+        }
+
+        fetch("http://localhost:3000/api/transacciones", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify({ usuario_id, tipo, cantidad, fecha })
+        })
+        .then(res => res.json())
+        .then(data => {
+          alert(data.mensaje || data.error);
+          cargarTransacciones();
+        });
+      });
+
+      function cargarTransacciones(filtro = "todo") {
+        fetch(`http://localhost:3000/api/transacciones/${usuario_id}`)
+          .then(res => res.json())
+          .then(transacciones => {
+            lista.innerHTML = "";
+            const filtradas = transacciones.filter(t =>
+              filtro === "todo" ? true : t.tipo === filtro
+            );
+            filtradas.forEach(t => {
+              const li = document.createElement("li");
+              li.textContent = `${t.fecha} - ${t.tipo.toUpperCase()}: $${t.cantidad}`;
+              lista.appendChild(li);
+            });
+          });
+      }
+
+      btnIngresos.addEventListener("click", () => cargarTransacciones("ingreso"));
+      btnGastos.addEventListener("click", () => cargarTransacciones("gasto"));
+      btnTodo.addEventListener("click", () => cargarTransacciones("todo"));
+
+      cargarTransacciones();
+    };
+  </script>
 </body>
 </html>
