--- a/presupuestos.html
+++ b/presupuestos.html
@@ -45,7 +45,6 @@
 
   <script>
     window.onload = () => {
-      // Validar token
       const token = localStorage.getItem("token");
       if (!token) {
         alert("Debes iniciar sesión para acceder.");
@@ -53,7 +52,6 @@
         return;
       }
 
-      // Decodificar token
       function parseJwt(token) {
         try {
           const base64Url = token.split('.')[1];
@@ -90,9 +88,12 @@
           return;
         }
 
-        fetch("http://localhost:3000/api/presupuestos", {
+        fetch(`https://finankey-backend.onrender.com/api/presupuestos/${usuario_id}`, {
           method: "POST",
-          headers: { "Content-Type": "application/json" },
+          headers: { 
+            "Content-Type": "application/json",
+            "Authorization": `Bearer ${token}` 
+          },
           body: JSON.stringify({ usuario_id, categoria, limite })
         })
         .then(res => res.json())
@@ -111,7 +112,7 @@
       });
 
       function cargarPresupuestos() {
-        fetch(`http://localhost:3000/api/presupuestos/${usuario_id}`)
+        fetch(`https://finankey-backend.onrender.com/api/presupuestos/${usuario_id}`)
           .then(res => res.json())
           .then(presupuestos => {
             tablaBody.innerHTML = "";
