--- a/registro.html
+++ b/registro.html
@@ -66,7 +66,7 @@
             return;
         }
 
-        fetch("http://localhost:3000/api/register", {
+        fetch("https://finankey-backend.onrender.com/api/register", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ nombre, correo, contrasena })
