Test DB - Presupuestos

--- a/presupuestos.html
+++ b/presupuestos.html
@@ -88,7 +88,7 @@
           return;
         }
 
-        fetch(`https://finankey-backend.onrender.com/api/presupuestos/${usuario_id}`, {
+        fetch(`https://finankey-backend.onrender.com/api/presupuestos`, {
           method: "POST",
           headers: { 
             "Content-Type": "application/json",
