--- a/ingresos-gastos.html
+++ b/ingresos-gastos.html
@@ -13,6 +13,7 @@
       <button onclick="window.location.href='ingresos-gastos.html'">Ingresos y Gastos</button>
       <button onclick="window.location.href='presupuestos.html'">Presupuestos</button>
       <button onclick="window.location.href='visualizacion.html'">Visualización</button>
+      <button id="logoutBtn">Cerrar sesión</button>
     </nav>
   </header>
   <main>
@@ -46,6 +47,11 @@
         return;
       }
 
+      document.getElementById("logoutBtn").addEventListener("click", () => {
+        localStorage.removeItem("token"); 
+        window.location.href = "inicio-sesion.html"; 
+      });
+
       function parseJwt(token) {
         try {
           const base64Url = token.split('.')[1];
@@ -59,9 +65,7 @@
       }
 
       const decoded = parseJwt(token);
-      console.log("Token decodificado:", decoded);
       const usuario_id = decoded?.id;
-
       if (!usuario_id) {
         alert("Token inválido. Inicia sesión nuevamente.");
         window.location.href = "inicio-sesion.html";
@@ -72,14 +76,13 @@
       const inputFecha = document.getElementById("input-fecha");
       const inputCantidad = document.getElementById("input-cantidad");
       const selectTipo = document.getElementById("select-tipo");
-
       const btnIngresos = document.getElementById("btn-ingresos");
       const btnGastos = document.getElementById("btn-gastos");
       const btnTodo = document.getElementById("btn-todo");
-
       const lista = document.createElement("ul");
       document.querySelector(".seccion-transacciones").appendChild(lista);
 
+      // Agregar Transacción
       btnAgregar.addEventListener("click", () => {
         const fecha = inputFecha.value;
         const tipo = selectTipo.value.toLowerCase();
@@ -113,6 +116,7 @@
         });
       });
 
+      // Filtros
       btnIngresos.addEventListener("click", () => cargarTransacciones("ingreso"));
       btnGastos.addEventListener("click", () => cargarTransacciones("gasto"));
       btnTodo.addEventListener("click", () => cargarTransacciones("todo"));
@@ -124,9 +128,7 @@
           }
         })
         .then(res => {
-          if (!res.ok) {
-            throw new Error(`HTTP error! status: ${res.status}`);
-          }
+          if (!res.ok) throw new Error(`HTTP error! status: ${res.status}`);
           return res.json();
         })
         .then(transacciones => {
@@ -146,7 +148,7 @@
         });
       }
 
-      cargarTransacciones(); // Carga inicial
+      cargarTransacciones();
     };
   </script>
 </body>
