--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <button onclick="location.href='ingresos-gastos.html'">Ingresos y Gastos</button>
       <button onclick="location.href='presupuestos.html'">Presupuestos</button>
       <button onclick="location.href='visualizacion.html'">Visualización</button>
-      <button onclick="cerrarSesion()">Cerrar sesión</button>
+      <button id="logoutBtn">Cerrar sesión</button>
     </nav>
   </header>
 
